@@ -294,3 +294,4 @@
 - Removed a lot of vars and stuff from the old config, also made some cleanups to reduce source size
 - Made del_Command(). 
 - Rewrote makeconf and makenet to use newconf (added some new features to makeconf as well)
+- Removed stskeeps's lazy add_CommandX (tm) code
